# quadruped_robot

./: .gitignore  CODE_ARCHITECTURE.md  README.md  run.sh
rl_base/: README.md  __init__.py  pyproject.toml  setup.py
rl_base/rl_base/: __init__.py  isaaclab_support.py
rl_base/rl_base/algorithms/: __init__.py  distillation.py  offpolicy_common.py  ppo.py  sac.py  td3.py
rl_base/rl_base/env/: __init__.py  vec_env.py
rl_base/rl_base/modules/: __init__.py  actor_critic.py  actor_critic_recurrent.py  discriminatorAEP.py  normalizer.py  rnd.py  student_teacher.py  student_teacher_recurrent.py  terrain_aware_actor_critic.py  terrain_aware_student_teacher.py
rl_base/rl_base/networks/: __init__.py  memory.py
rl_base/rl_base/runners/: __init__.py  on_policy_runner.py
rl_base/rl_base/storage/: __init__.py  rollout_storage.py
rl_base/rl_base/utils/: __init__.py  neptune_utils.py  utils.py  wandb_utils.py
unitree_rl_lab/: .gitignore  README.md
unitree_rl_lab/deploy/include/: unitree_articulation.h
unitree_rl_lab/deploy/include/FSM/: FSMState.h
unitree_rl_lab/deploy/robots/b2/config/: config.yaml
unitree_rl_lab/deploy/robots/go2/: CMakeLists.txt  main.cpp
unitree_rl_lab/scripts/: list_envs.py
unitree_rl_lab/scripts/mimic/: csv_to_npz.py  replay_npz.py
unitree_rl_lab/scripts/rl_base/: cli_args.py  eval_baseline_policy.py  inspect_checkpoint_keys.py  obstest.py  play_baseline.py  play_teacher.py  test_env_termination.py  train_baseline.py  train_teacher.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/: __init__.py  ui_extension_example.py
(+56 files in other folders)
